--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 logging.level.org.springframework.web=DEBUG
 
+spring.jmx.enabled=true
+management.endpoints.web.exposure.include=*
+debug=true
