--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <scope>provided</scope> <!-- Changed to 'provided' as Lombok is only needed at compile time -->
         </dependency>
 
+        <!-- MySQL Connector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
