--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bmw_store
+spring.datasource.url=jdbc:mysql://localhost:3306/bmwstore
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8081
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
