--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bmwstore
+spring.datasource.url=jdbc:mysql://localhost:3306/bmw_store
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8081
