--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ logging.level.org.springframework.web=DEBUG
 spring.jmx.enabled=true
 management.endpoints.web.exposure.include=*
 debug=true
+app.upload.dir=src/public/image/
